--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
             cd build
             export PATH=$PATH:/home/runner/.local/bin
             conan config init
-            conan install .. --build=missing --build sqlitecpp
+            conan install .. --build=missing -s compiler.cppstd=17
 
     - name: Build clas-digital
       shell: bash
