--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
             cd build
             export PATH=$PATH:/home/runner/.local/bin
             conan config init
-            conan install .. --build=missing -s compiler.cppstd=11
+            conan install .. --build=missing
 
     - name: Build clas-digital
       shell: bash
