Started to implement the event driven plug in system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,38 @@ endif()
 project(clas-digital)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)  # Includes the contents of the conanbuildinfo.cmake file.
 conan_basic_setup()  # Prepares the CMakeList.txt for Conan.
-
-
+find_package(Git)
 find_package(Threads REQUIRED)
 set(CMAKE_CXX_STANDARD 17)
+
+
+execute_process(COMMAND
+  "${GIT_EXECUTABLE}" describe --match=NeVeRmAtCh --always --abbrev=40 --dirty
+  WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  OUTPUT_VARIABLE GIT_SHA1
+  ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# the date of the commit
+execute_process(COMMAND
+  "${GIT_EXECUTABLE}" log -1 --format=%ad --date=local
+  WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  OUTPUT_VARIABLE GIT_DATE
+  ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# the subject of the commit
+execute_process(COMMAND
+  "${GIT_EXECUTABLE}" log -1 --format=%s
+  WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  OUTPUT_VARIABLE GIT_COMMIT_SUBJECT
+  ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# generate version.cc
+configure_file("${CMAKE_SOURCE_DIR}/src/shared/version.hpp.in"
+  "${CMAKE_SOURCE_DIR}/src/shared/version.hpp" @ONLY)
+
+
+
+
 
 set(SRC_FILES_SEARCH src/search/book_manager/Book.cpp src/search/book_manager/Bookmanager.cpp src/search/search/Search.cpp src/search/search/SearchOptions.cpp src/search/main.cpp src/shared/metadata_handler.cc src/shared/util/func.cpp src/shared/util/fuzzy.cpp)
 
@@ -19,7 +47,8 @@ add_library(clas_server_lib OBJECT src/shared/metadata_handler.cc
   src/shared/util/URLParser.cpp src/shared/util/ubuntu20matherror.cpp
   src/shared/util/func.cpp src/server/login/user.cpp
   src/server/zotero/zotero.cpp src/server/server/server.cc
-  src/server/server/server_config.cpp)
+  src/server/server/server_config.cpp
+  src/server/plugins/EventManager.cpp)
 
 
 set(SRC_FILES_SERVER_TEST src/server/test/main.cc
