Added a possible fix for MacOS and windows, also added the plugin manager to the server class and loads plugins from the config file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,10 @@ add_executable(clas_digital_server.o $<TARGET_OBJECTS:clas_server_lib> src/serve
 add_executable(clas_digital_server_test.o $<TARGET_OBJECTS:clas_server_lib>
   ${SRC_FILES_SERVER_TEST})
 
+IF(APPLE)
+  add_compile_options(-bundle_loader)
+ENDIF(APPLE)
+
 set(CXX_STDLIB "")
 
 
