--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,9 +60,9 @@ set(SRC_FILES_SERVER_TEST src/server/test/main.cc
   src/server/plugins/tests/plug_in_manager_test.cpp)
 
 IF(APPLE)
-    SET(LIBRARY_TARGET "MODULE")
+    SET(LIBRARY_TARGET MODULE)
 ELSE(APPLE)
-    SET(LIBRARY_TARGET "SHARED")
+    SET(LIBRARY_TARGET SHARED)
 ENDIF(APPLE)
 
 add_library(test_plugin ${LIBRARY_TARGET} src/server/plugins/tests/test_plugin.cpp)
@@ -72,7 +72,7 @@ add_executable(clas_digital_server_test.o $<TARGET_OBJECTS:clas_server_lib>
   ${SRC_FILES_SERVER_TEST})
 
 IF(APPLE)
-  target_compile_options(test_plugin PUBLIC -bundle_loader)
+  target_compile_options(test_plugin PUBLIC -bundle_loader -std=c++17 -Wall -Wextra -pedantic -Werror)
 ENDIF(APPLE)
 
 set(CXX_STDLIB "")
