Working on a working dll in windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ set(SRC_FILES_SERVER_TEST src/server/test/main.cc
   src/server/plugins/tests/event_manager_test.cpp
   src/server/plugins/tests/plug_in_manager_test.cpp)
 
-add_library(test_plugin SHARED src/server/plugins/tests/test_plugin.cpp)
+add_library(test_plugin SHARED src/server/plugins/tests/test_plugin.cpp $<TARGET_OBJECTS:clas_server_lib>)
 
 add_executable(clas_digital_server.o $<TARGET_OBJECTS:clas_server_lib> src/server/main.cpp)
 add_executable(clas_digital_server_test.o $<TARGET_OBJECTS:clas_server_lib>
@@ -112,6 +112,7 @@ target_include_directories(clas_digital_search.o PUBLIC
   "src/search"
 )
 
+target_link_libraries(test_plugin ${CONAN_LIBS} ${CXX_STDLIB})
 target_link_libraries(clas_digital_server.o ${CONAN_LIBS} ${CXX_STDLIB})
 target_link_libraries(clas_digital_server_test.o ${CONAN_LIBS} ${CXX_STDLIB})
 target_link_libraries(clas_digital_search.o ${CONAN_LIBS} ${CXX_STDLIB})
