Fixed small compile mistake on apple and fixed the pathing in windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -181,4 +181,4 @@ jobs:
     - name: Do tests on ${{ matrix.os }}
       run:  |
             cd build
-            bin/clas_digital_server_test.o
+            bin\clas_digital_server_test.o
