--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ compile_commands.json
 server.config
 .clangd/*
 .cache/*
-src/search/tests/test_books_2/
-src/search/tests/test_books/UEHEJINT/intern
+src/search/tests/example_data/ocr_data/test_books/UEHEJINT/intern
+src/search/tests/example_data/wiki_data/test_books/*
+*intern
 
 BSBDownLoadFertig_noOCR.txt
 gibtEsBeiBSB_OCR.txt
