Working on search speed, working on relevance calculation, working on sorting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,6 @@ set(SRC_FILES_SEARCH
   src/search/data_models/result_object.cc
   src/search/data_models/search_object.cc 
   src/search/data_models/search_options.cc 
-  src/search/data_models/sorted_matches.cc 
   src/search/main.cpp 
   src/shared/metadata_handler.cc 
   src/shared/util/func.cpp 
@@ -60,7 +59,6 @@ set(SRC_FILES_SEARCH_TEST
   src/search/data_models/result_object.cc
   src/search/data_models/search_object.cc 
   src/search/data_models/search_options.cc 
-  src/search/data_models/sorted_matches.cc 
   src/shared/metadata_handler.cc 
   src/shared/util/func.cpp 
   src/shared/util/fuzzy.cpp
@@ -72,6 +70,18 @@ set(SRC_FILES_SEARCH_TEST
   src/search/tests/util.cc
 )
 
+set(SRC_FILES_SPEED_TEST 
+  src/search/book_manager/book.cc 
+  src/search/book_manager/book_manager.cc 
+  src/search/data_models/tmp_word_info.cc 
+  src/search/data_models/result_object.cc
+  src/search/data_models/search_object.cc 
+  src/search/data_models/search_options.cc 
+  src/shared/metadata_handler.cc 
+  src/shared/util/func.cpp 
+  src/shared/util/fuzzy.cpp
+  src/search/tests/test_search_speed.cc
+)
 
 add_library(clas_server_lib OBJECT src/shared/metadata_handler.cc
   src/shared/util/URLParser.cpp src/shared/util/ubuntu20matherror.cpp
@@ -110,16 +120,16 @@ add_executable(clas_digital_server_test.o $<TARGET_OBJECTS:clas_server_lib>
 
 set(CXX_STDLIB "")
 
-
 add_executable(clas_digital_search.o  ${SRC_FILES_SEARCH})
 add_executable(clas_digital_search_test.o  ${SRC_FILES_SEARCH_TEST})
+add_executable(clas_digital_speed_test.o  ${SRC_FILES_SPEED_TEST})
 
 if(MSVC)
   add_compile_options(/W4 /WX)
   #target_link_libraries(test_plugin ${CONAN_LIBS} ${CXX_STDLIB})
   #  target_link_libraries(clas_digital_plugin ${CONAN_LIBS} ${CXX_STDLIB})
 else()
-  add_compile_options(-Wall -Wextra -pedantic -Werror)
+  add_compile_options(-Wall -Wextra -pedantic -Werror -O3)
 
   set(CXX_STDLIB stdc++)
 endif()
@@ -173,10 +183,19 @@ target_include_directories(clas_digital_search_test.o PUBLIC
   "src/search/tests"
 )
 
+target_include_directories(clas_digital_speed_test.o PUBLIC
+  "src/shared"
+  "src/shared/util"
+  "src/search"
+  "src/search/data_models"
+  "src/search/tests"
+)
+
 target_link_libraries(clas_digital_server.o ${CONAN_LIBS} ${CXX_STDLIB})
 target_link_libraries(clas_digital_server_test.o ${CONAN_LIBS} ${CXX_STDLIB})
 target_link_libraries(clas_digital_search.o ${CONAN_LIBS} ${CXX_STDLIB})
 target_link_libraries(clas_digital_search_test.o ${CONAN_LIBS} ${CXX_STDLIB})
+target_link_libraries(clas_digital_speed_test.o ${CONAN_LIBS} ${CXX_STDLIB})
 
 set(INSTALL_DIRS /etc/clas-digital-devel)
 set(SERVICE_TARGET clas-digital-devel)
@@ -188,6 +207,7 @@ install(FILES src/default DESTINATION /etc/nginx/sites-available)
 install(PROGRAMS build/bin/clas_digital_server.o DESTINATION ${INSTALL_DIRS})
 install(PROGRAMS build/bin/clas_digital_search.o DESTINATION ${INSTALL_DIRS})
 install(PROGRAMS build/bin/clas_digital_search_test.o DESTINATION ${INSTALL_DIRS})
+install(PROGRAMS build/bin/clas_digital_speed_test.o DESTINATION ${INSTALL_DIRS})
 install(DIRECTORY web DESTINATION ${INSTALL_DIRS} PATTERN "web/books/*" EXCLUDE)
 install(DIRECTORY bin/trainingdata DESTINATION ${INSTALL_DIRS})
 install(CODE "MESSAGE(\"Installing files done. Restarting nginx and the service ${SERVICE_TARGET}\")")
