Updates gitignore, to ignore databases.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ src/search/tests/example_data/ocr_data/test_books/UEHEJINT/intern
 src/search/tests/example_data/wiki_data/test_books/*
 *intern
 
+search_data/*
+
 BSBDownLoadFertig_noOCR.txt
 gibtEsBeiBSB_OCR.txt
 gibtEsBeiBSB_noOCR.txt
