Fixes error in okapi calculation. Minor imporvements in testing and fuzzy-search implementation.

--- a/search.config
+++ b/search.config
@@ -1,9 +1,9 @@
 {
   "port": 4848,
-  "upload_points": ["src/search/tests/example_data/ocr_data/test_books"],
+  "upload_points": ["src/search/tests/example_data/wiki_data/test_books"],
   "dictionary":"web/dict.json",
-  "search_data":"search_data/ocr_data.db",
-  "metadata":"src/search/tests/example_data/ocr_data/metadata.json",
+  "search_data":"search_data/wiki_data.db",
+  "metadata":"src/search/tests/example_data/wiki_data/metadata.json",
   "parse_config":{
   "searchableTags":{
         "title":{
